--- a/bslaravel/docker-compose.yml
+++ b/bslaravel/docker-compose.yml
@@ -34,5 +34,6 @@ services:
       working_dir: /application
       volumes:
         - .:/application
+        - ./storage-db:/var/lib/mysql
         - ./phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/7.3/fpm/conf.d/99-overrides.ini
 
